<resources>
    <string name="app_name">BookNow</string>
    <string name="title_activity_login">Login</string>
    <string name="welcome_literal" translatable="true">Welcome</string>
    <string name="configure_profile_literal">Configure profile</string>
    <string name="manage_experiences_literal">Manage experiences</string>
    <string name="start_book_literal">Start book</string>
    <string name="user_literal">User</string>
    <string name="password_literal">Password</string>
    <string name="login_literal">Login</string>
    <string name="register_literal">Register</string>
    <string name="log_facebook_literal">login with facebook</string>
    <string name="search_restaurant_literal">Search restaurant</string>
    <string name="booking_literal">Bookings</string>
    <string name="pending_booking_literal">Pending</string>
    <string name="closed_booking_literal">Closed</string>
</resources>
